feat: implement payment processing and order management features; add payment client, event listeners, and order cleanup service